--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,11 +5,21 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "imageplustexttoimage",
-	"main": "src/index.ts",
+	"main": "src/worker.ts",
 	"compatibility_date": "2025-08-26",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"compatibility_flags":["nodejs_compat"],
+	"build": {
+		"command": "npm run build:frontend && npm run build:static"
+	},
+	"r2_buckets": [
+		{
+			"binding": "R2_BUCKET",
+			"bucket_name": "nano-banana-worker"
+		}
+	]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
